# ar-lang

./: CMakeLists.txt  LICENSE  cpp.hint  vm.cpp  vm.h
docs/: README.md  TODO.md  data-types.md  directory-structure.md  examples.md  grammar.txt  language-spec.md  memory.md  working-with-source-code.md
docs/changes/: INV-001_stack_based_return.md
docs/concepts/: constant.md  method.md  package.md  signatures.md
docs/instructions/: README.md  add.md  alloch.md  allocs.md  call.md  cgt.md  clt.md  const.md  conv.md  copy_s.md  jmpt.md  lda.md  lda_a.md  ldc.md  ldc_s.md  ldelem.md  ldelem_s.md  ldl.md  ldl_a.md  stelem.md  stelem_s.md  stl.md  sturef.md  sturef_s.md  sunref.md
projects/game/: example.vma  main.vm
source/: Arlang.h  Array.h  Common.h  Config.h  Memory.cpp  Memory.h  Primitive.cpp  Primitive.h  Utils.h
source/Builder/: Instructions.cpp  Instructions.h  LinkError.cpp  LinkError.h  Linker.cpp  Linker.h  MemoryStream.cpp  MemoryStream.h  Symbols.cpp  Symbols.h
source/Compilation/: CompileError.cpp  CompileError.h  Compiler.cpp  Compiler.h  Error.cpp  Error.h  ID.cpp  ID.h  Lexer.cpp  Lexer.h  ParseError.cpp  ParseError.h  SourceCode.h  SourceCodeParser.cpp  SourceCodeParser.h  SourceCodeView.h  SyntaxTree.cpp  SyntaxTree.h  SyntaxTreeNode.cpp  SyntaxTreeNode.h  SyntaxTreeNodeClassDef.h  SyntaxTreeNodeConstant.cpp  SyntaxTreeNodeConstant.h  SyntaxTreeNodeFunc.cpp  SyntaxTreeNodeFunc.h  SyntaxTreeNodeFuncArg.cpp  SyntaxTreeNodeFuncArg.h  SyntaxTreeNodeFuncBody.cpp  SyntaxTreeNodeFuncBody.h  SyntaxTreeNodeFuncDef.cpp  SyntaxTreeNodeFuncDef.h  SyntaxTreeNodeFuncRet.cpp  SyntaxTreeNodeFuncRet.h  SyntaxTreeNodeImport.cpp  SyntaxTreeNodeImport.h  SyntaxTreeNodeMultiType.cpp  SyntaxTreeNodeMultiType.h  SyntaxTreeNodeOp.cpp  SyntaxTreeNodeOp.h  SyntaxTreeNodeOpBinop.cpp  (+27 more)
source/Compiler/: Compiler.cpp  Compiler.h  Lexer.cpp  Lexer.h  ParseError.cpp  SourceCodeParser.h  SourceCodeView.h  SyntaxTree.h  SyntaxTreeNodeClassDef.h  SyntaxTreeNodeFuncArg.cpp  SyntaxTreeNodeFuncArg.h  SyntaxTreeNodeFuncDef.h  SyntaxTreeNodeImport.cpp  SyntaxTreeNodeImport.h  SyntaxTreeNodeOpBinop.h  SyntaxTreeNodeOpReturn.cpp  SyntaxTreeNodeOpUnaryop.h  SyntaxTreeNodePackage.cpp  SyntaxTreeNodePrimitive.cpp  SyntaxTreeNodePrimitive.h  SyntaxTreeNodeRef.h  SyntaxTreeNodeTypeRef.h
source/Interpreter/: Bytecode.h  Error.cpp  Error.h  Instructions.h  Primitive.h  Process.cpp  Process.h  ProcessError.cpp  ProcessError.h  Thread.cpp  Thread.h  ThreadError.cpp  ThreadError.h  ThreadStack.cpp  ThreadStack.h
source/Tests/: SuiteBuilder.cpp  SuiteCommon.cpp  SuiteCompilation.cpp  Test.hpp  Utils.hpp  main.cpp
src/: arBuilder.c  arBuilder.h  arByteStream.c  arByteStream.h  arBytecode.h  arCompiler.c  arCompiler.h  arInstructions.h  arList.h  arLocals.c  arLocals.h  arMemory.c  arMemory.h  arMemoryPool.c  arMemoryPool.h  arMessage.c  arMessage.h  arPrimitive.h  arPrimitiveValue.c  arPrimitiveValue.h  arPrimitiveValue_add.c  arPrimitiveValue_div.c  arPrimitiveValue_mult.c  arPrimitiveValue_sub.c  arProcess.c  arProcess.h  arStack.c  arStack.h  arString.c  arString.h  arStringPool.c  arStringPool.h  arThread.c  arThread.h  arUtils.c  arUtils.h  arconf.h  arlang.h  vm.h  vm_bytestream.c  (+16 more)
src/builder/: definition.c  definition.h  message_codes.h  messages.c  messages.h  types.c  types.h
src/compiler/: eoe.h  lexer.c  lexer.h  message_codes.h  messages.c  messages.h  optimizations.c  optimizations.h  search.c  search.h  signature.c  signature.h  signatures.c  signatures.h  source_code.c  source_code.h  symbol.c  symbol.h  syntax_tree.c  syntax_tree.h  syntax_tree_compiler.c  syntax_tree_compiler.h  syntax_tree_optimize.c  syntax_tree_resolve.c  syntax_tree_resolve.h  syntax_tree_search.c  syntax_tree_search.h  tokens.h  vm_compiler.c  vm_compiler.h  vm_error.h  vm_lexer.c  vm_lexer.h  vm_lexer_logic.h  vm_lexer_math.h  vmc_bytestream.c  vmc_bytestream.h  vmc_error.c  vmc_error.h
src/interpreter/: add.inc.c  arrays.inc.c  bit.inc.c  cmp.inc.c  config.h  const.inc.c  conv.inc.c  copy_s.inc.c  debug.c  debug.h  div.inc.c  func.inc.c  globals.inc.c  jmp.inc.c  lists.c  lists.h  locals.c  locals.inc.c  memory.inc.c  mul.inc.c  neg.inc.c  process.c  process.h  stack.c  stack.h  sturef.inc.c  sub.inc.c  thread.c  thread.h  vmi_config.h  vmi_debug.c  vmi_debug.h  vmi_list_functions.c  vmi_list_functions.h  vmi_list_packages.c  vmi_list_packages.h  vmi_locals.c  vmi_locals.h  vmi_ops.h  vmi_process.c  (+6 more)
src/lexer/: vml.h
src/vmc/: vmc_compiler.c  vmc_compiler.h  vmc_compiler_instr.inc.c  vmc_compiler_messages.c  vmc_compiler_messages.h  vmc_compiler_types.c  vmc_compiler_types.h  vmc_debug.c  vmc_debug.h  vmc_error.c  vmc_error.h  vmc_lexer.c  vmc_lexer.h  vmc_lexer_logic.h  vmc_lexer_messages.c  vmc_lexer_messages.h  vmc_linker.c  vmc_linker.h  vmc_linker_marker.c  vmc_linker_marker.h  vmc_linker_messages.c  vmc_linker_messages.h  vmc_string_pool.c  vmc_string_pool.h
src/vmcode/: syntax_tree.c  syntax_tree.h  vmcd_lexer.c  vmcd_lexer.h  vmcd_list_sources.c  vmcd_list_sources.h  vmcd_lists.c  vmcd_lists.h  vmcd_messages.c  vmcd_messages.h  vmcd_source_code.c  vmcd_source_code.h  vmcd_types.c  vmcd_types.h  vmcode.c  vmcode.h
src/vmp/: const.c  const.h  const_add.c  const_div.c  const_mult.c  const_sub.c  vmp.c  vmp.h  vmp_debug.c  vmp_debug.h  vmp_instr.c  vmp_instr.h  vmp_list_args.c  vmp_list_args.h  vmp_list_funcs.c  vmp_list_funcs.h  vmp_list_globals.c  vmp_list_globals.h  vmp_list_imports.c  vmp_list_imports.h  vmp_list_inherited_by.c  vmp_list_inherited_by.h  vmp_list_inherits_from.c  vmp_list_inherits_from.h  vmp_list_locals.c  vmp_list_locals.h  vmp_list_markers.c  vmp_list_markers.h  vmp_list_packages.c  vmp_list_packages.h  vmp_list_returns.c  vmp_list_returns.h  vmp_list_types.c  vmp_list_types.h  vmp_lists.c  vmp_lists.h  vmp_messages.c  vmp_messages.h  vmp_string_pool.c  vmp_string_pool.h  (+2 more)
src/zpp/: compiler.c  compiler.h  lexer.c  (+13 more)
test/: main.cpp  suite_builder.cpp  suite_compiler.cpp  suite_lexer.cpp  suite_vm.cpp  suite_vmcode.cpp  suite_vmp.cpp  suite_zpp.cpp  test.hpp  utils.hpp
(+79 files in other folders)
